# systems_tunnel_ground_truth

./: CMakeLists.txt  Tunnel_Artifact_Ground_Truth.xlsx  Tunnel_Fiducials_Ground_Truth.xlsx  package.xml  readme.md
config/: ex_artifacts_a.yaml  ex_artifacts_b.yaml  sr_artifacts_a.yaml  sr_artifacts_b.yaml
data/: SubTLogo.pcd  Tunnel_Circuit_LowRes_Scan_EX_Frame.pcd
launch/: view.launch  view_tunnel.rviz
network/: readme.md
network/data/: ex_edgelist.csv  ex_edgelist_nodata.csv  sr_edgelist.csv  sr_edgelist_nodata.csv
scripts/: publish_artifacts.py
src/: load_pcd.cpp
